horizo_vertic_to_be_checked

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "cub.h": "c"
+        "cub.h": "c",
+        "iosfwd": "c",
+        "iterator": "c"
     }
 }
